# EmployeeManagementSystem-Web

./: .gitignore  README.md
web/: index.html
职工管理系统/: .gitignore  CMakeLists.txt  README.md  boss.cpp  boss.h  employee.cpp  employee.h  main.cpp  manager.cpp  manager.h  worker.h  workerManager.cpp  workerManager.h
